tests/testcases/errors/BCE0021-1.boo
"""
BCE0021-1.boo(5,8): BCE0021: Namespace 'Bad.Namespace' not found, maybe you forgot to add an assembly reference?
"""

import Bad.Namespace

print "ok"

